--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,9 @@ dependencies:
 test:
   override:
     - meteor --test
+
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: ketch-dev
