Attempt to upgrade to latest npm and clean cache

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,9 @@ dependencies:
     - ~/.meteor
   pre:
     - curl https://install.meteor.com | /bin/sh
+    # Workaround attempts for issues introduced by meteorhacks:npm
+    - npm install -g npm
+    - npm cache clean
 
 test:
   override:
