--- a/circle.yml
+++ b/circle.yml
@@ -7,13 +7,13 @@ dependencies:
     # node-sass which I'm not even aware that we are using
     # Removing the node_modules directory seems to fix this issue such that
     # the second time the command runs it's ok
-    - meteor run --test --settings settings/test.json || true
+    - meteor --test --settings settings/test.json || true
     - rm -rf node_modules
 
 test:
   override:
-    # Try single run and see if it makes test more reliable, inspiration from https://circleci.com/gh/bumbleblym/meteor-ci/3
-    - JASMINE_SINGLE_RUN=1 JASMINE_BROWSER=PhantomJS meteor run --test --settings settings/test.json
+    # See https://github.com/Sanjo/meteor-jasmine for why we use this specific release of meteor
+    - meteor --test --settings settings/test.json --release velocity:METEOR@1.1.0.2_2
 
 deployment:
   dev:
