--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@
 dependencies:
   pre:
     - curl https://install.meteor.com | /bin/sh
+  override:
+    - source .profile.d/resolve_settings.sh
   post:
     # Work around bug where the first time we run test it fails on error related to
     # node-sass which I'm not even aware that we are using
@@ -14,7 +16,7 @@ test:
     # meteor-jasmine says we need to use --release velocity:METEOR@1.1.0.2_2 but in practice we are ok without
     # See https://github.com/Sanjo/meteor-jasmine for why we use this specific release of meteor
     # Use JASMINE_SINGLE_RUN so test actually passes inspiration from https://circleci.com/gh/bumbleblym/meteor-ci/3
-    - JASMINE_SINGLE_RUN=1 JASMINE_BROWSER=PhantomJS meteor run --test --settings settings/test.json
+    - JASMINE_SINGLE_RUN=1 JASMINE_BROWSER=PhantomJS meteor run --test --settings settings/settings.json
 
 deployment:
   dev:
