--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ test:
     # meteor-jasmine says we need to use --release velocity:METEOR@1.1.0.2_2 but in practice we are ok without
     # See https://github.com/Sanjo/meteor-jasmine for why we use this specific release of meteor
     # Use JASMINE_SINGLE_RUN so test actually passes inspiration from https://circleci.com/gh/bumbleblym/meteor-ci/3
-    - JASMINE_SINGLE_RUN=1 JASMINE_BROWSER=PhantomJS meteor run --test --settings settings/settings.json
+    - JASMINE_SINGLE_RUN=1 JASMINE_BROWSER=PhantomJS meteor run --test --settings settings.json
 
 deployment:
   dev:
